templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: myapp-ns
  annotations:
    networking.istio.io/service-type: LoadBalancer
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /healthz/ready
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
